--- a/ds-landscape.html
+++ b/ds-landscape.html
@@ -1083,7 +1083,7 @@ Jae Jung
 <li><a href="#/demonstration-of-data-visualization" id="/toc-demonstration-of-data-visualization"><span class="header-section-number">6</span> Demonstration of data visualization</a></li>
 <li><a href="#/interoperability-among-multiple-languages" id="/toc-interoperability-among-multiple-languages"><span class="header-section-number">7</span> Interoperability among multiple languages</a></li>
 <li><a href="#/use-of-ai-for-data-visualization" id="/toc-use-of-ai-for-data-visualization"><span class="header-section-number">8</span> Use of AI for data visualization</a></li>
-<li><a href="#/assignments-due-next-week" id="/toc-assignments-due-next-week"><span class="header-section-number">9</span> Assignments due next week</a></li>
+<li><a href="#/assignments" id="/toc-assignments"><span class="header-section-number">9</span> Assignments?</a></li>
 </ul>
 </nav>
 </section>
@@ -1238,11 +1238,8 @@ Figure 1: The impact of cylinder size on the city mileage using density plot
 </div>
 </div>
 </section>
-<section id="assignments-due-next-week" class="slide level2" data-number="9">
-<h2><span class="header-section-number">9</span> Assignments due next week</h2>
-<ul>
-<li>Spreadsheet Certificate, Due on 2/2</li>
-</ul>
+<section id="assignments" class="slide level2" data-number="9">
+<h2><span class="header-section-number">9</span> Assignments?</h2>
 
 </section>
     </div>
