added R vs. Python h2 section

--- a/ds-landscape.html
+++ b/ds-landscape.html
@@ -1083,7 +1083,8 @@ Jae Jung
 <li><a href="#/demonstration-of-data-visualization" id="/toc-demonstration-of-data-visualization"><span class="header-section-number">6</span> Demonstration of data visualization</a></li>
 <li><a href="#/interoperability-among-multiple-languages" id="/toc-interoperability-among-multiple-languages"><span class="header-section-number">7</span> Interoperability among multiple languages</a></li>
 <li><a href="#/use-of-ai-for-data-visualization" id="/toc-use-of-ai-for-data-visualization"><span class="header-section-number">8</span> Use of AI for data visualization</a></li>
-<li><a href="#/assignments" id="/toc-assignments"><span class="header-section-number">9</span> Assignments?</a></li>
+<li><a href="#/r-vs.-python" id="/toc-r-vs.-python"><span class="header-section-number">9</span> R vs. Python</a></li>
+<li><a href="#/assignments" id="/toc-assignments"><span class="header-section-number">10</span> Assignments?</a></li>
 </ul>
 </nav>
 </section>
@@ -1238,8 +1239,16 @@ Figure 1: The impact of cylinder size on the city mileage using density plot
 </div>
 </div>
 </section>
-<section id="assignments" class="slide level2" data-number="9">
-<h2><span class="header-section-number">9</span> Assignments?</h2>
+<section id="r-vs.-python" class="slide level2" data-number="9">
+<h2><span class="header-section-number">9</span> R vs. Python</h2>
+<ul>
+<li><p>Pros and Cons?</p></li>
+<li><p>Rise and Falls of Popular Programming Languages: from 1958 to 2025</p>
+<iframe data-external="1" src="https://www.youtube.com/embed/ZTPrbAKmcdo" title frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+</ul>
+</section>
+<section id="assignments" class="slide level2" data-number="10">
+<h2><span class="header-section-number">10</span> Assignments?</h2>
 <div class="callout callout-tip callout-titled callout-style-default">
 <div class="callout-body">
 <div class="callout-title">
