--- a/ds-landscape.html
+++ b/ds-landscape.html
@@ -1084,6 +1084,7 @@ Jae Jung
 <li><a href="#/interoperability-among-multiple-languages" id="/toc-interoperability-among-multiple-languages"><span class="header-section-number">7</span> Interoperability among multiple languages</a></li>
 <li><a href="#/use-of-ai-for-data-visualization" id="/toc-use-of-ai-for-data-visualization"><span class="header-section-number">8</span> Use of AI for data visualization</a></li>
 <li><a href="#/r-vs.-python" id="/toc-r-vs.-python"><span class="header-section-number">9</span> R vs. Python</a></li>
+
 <li><a href="#/assignments" id="/toc-assignments"><span class="header-section-number">10</span> Assignments?</a></li>
 </ul>
 </nav>
@@ -1242,10 +1243,13 @@ Figure 1: The impact of cylinder size on the city mileage using density plot
 <section id="r-vs.-python" class="slide level2" data-number="9">
 <h2><span class="header-section-number">9</span> R vs. Python</h2>
 <ul>
-<li><p>Pros and Cons?</p></li>
-<li><p>Rise and Falls of Popular Programming Languages: from 1958 to 2025</p>
-<iframe data-external="1" src="https://www.youtube.com/embed/ZTPrbAKmcdo" title frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+<li>Pros and Cons?</li>
+<li>Rise and Fall of Popular Programming Languages: from 1958 to 2025 (Next slide)</li>
 </ul>
+</section>
+<section class="slide level2">
+
+<iframe data-external="1" src="https://www.youtube.com/embed/ZTPrbAKmcdo" width="100%" height="100%" title="Rise and Fall of Popular Programming Languages: from 1958 to 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
 <section id="assignments" class="slide level2" data-number="10">
 <h2><span class="header-section-number">10</span> Assignments?</h2>
